collects/tests/xml/clark-tests/valid/not-sa/005-1.ent
<!ELEMENT doc EMPTY>
<!ENTITY % e SYSTEM "005-2.ent">
%e;
