collects/tests/xml/clark-tests/invalid/001.ent
<!ELEMENT doc EMPTY>
<!ENTITY % e "<!--">
%e; -->
